[package]
name = "bomboni_wasm"
version = "0.1.62"
authors = ["Tin Rabzelj <tin@flinect.com>"]
description = "Utilities for working with WASM. Part of Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "../README.md"
edition = "2021"

[lib]
name = "bomboni_wasm"
path = "src/lib.rs"

[features]
root-crate = ["bomboni_wasm_derive/root-crate"]
derive = ["dep:bomboni_wasm_derive"]
js = ["bomboni_wasm_core/js"]

[dependencies]
bomboni_wasm_core = { workspace = true }
bomboni_wasm_derive = { workspace = true, optional = true }

serde.workspace = true
wasm-bindgen = "0.2.97"
js-sys = "0.3.74"
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
