[package]
name = "bomboni_wasm"
version.workspace = true
authors.workspace = true
description = "Utilities for working with WASM. Part of Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "README.md"
edition.workspace = true

[lib]
name = "bomboni_wasm"
path = "src/lib.rs"

[features]
root-crate = ["bomboni_wasm_derive/root-crate"]
derive = ["dep:bomboni_wasm_derive"]
js = ["bomboni_wasm_core/js"]

[dependencies]
bomboni_wasm_core = { path = "../bomboni_wasm_core" }
bomboni_wasm_derive = { path = "../bomboni_wasm_derive", optional = true }

serde.workspace = true
wasm-bindgen = "0.2.105"
js-sys = "0.3.82"
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
