[package]
name = "bomboni_wasm_core"
version = "0.1.55"
authors = ["Tin Rabzelj <tin@flinect.com>"]
description = "Internal WASM part of Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "../README.md"
edition = "2021"

[lib]
name = "bomboni_wasm_core"
path = "src/lib.rs"

[features]
js = []

[dependencies]
bomboni_core = { path = "../bomboni_core", version = "0.1.55" }

proc-macro2 = { version = "1.0.81", features = ["proc-macro"] }
syn = "2.0.60"
quote = "1.0.36"
darling = "0.20.8"
serde_derive_internals = "0.29.0"
convert_case = "0.6.0"
