[package]
name = "bomboni_wasm_core"
version = "0.1.58"
authors = ["Tin Rabzelj <tin@flinect.com>"]
description = "Internal WASM part of Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "../README.md"
edition = "2021"

[lib]
name = "bomboni_wasm_core"
path = "src/lib.rs"

[features]
js = []

[dependencies]
bomboni_core = { path = "../bomboni_core", version = "0.1.58" }

proc-macro2 = { version = "1.0.86", features = ["proc-macro"] }
syn = "2.0.72"
quote = "1.0.36"
darling = "0.20.10"
serde_derive_internals = "0.29.1"
convert_case = "0.6.0"
