[package]
name = "bomboni_wasm_core"
version.workspace = true
authors.workspace = true
description = "Internal WASM part of Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "README.md"
edition.workspace = true

[lib]
name = "bomboni_wasm_core"
path = "src/lib.rs"

[features]
js = []

[dependencies]
bomboni_core = { path = "../bomboni_core" }

proc-macro2 = { workspace = true, features = ["proc-macro"] }
syn.workspace = true
quote.workspace = true
darling.workspace = true
serde_derive_internals.workspace = true
convert_case.workspace = true
