[package]
name = "bomboni_wasm_derive"
version = "0.1.56"
authors = ["Tin Rabzelj <tin@flinect.com>"]
description = "Internal WASM derive macros for Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "../README.md"
edition = "2021"

[lib]
name = "bomboni_wasm_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
bomboni_core = { path = "../bomboni_core", version = "0.1.56" }
bomboni_wasm_core = { path = "../bomboni_wasm_core", version = "0.1.56" }

proc-macro2 = { version = "1.0.83", features = ["proc-macro"] }
syn = "2.0.66"
quote = "1.0.36"
darling = "0.20.9"
serde_derive_internals = "0.29.1"
