[package]
name = "bomboni_wasm_derive"
version.workspace = true
authors.workspace = true
description = "Internal WASM derive macros for Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "README.md"
edition.workspace = true

[lib]
name = "bomboni_wasm_derive"
path = "src/lib.rs"
proc-macro = true

[features]
# Generate `bomboni::wasm` instead of `bomboni_wasm`
root-crate = []

[dependencies]
bomboni_core = { workspace = true }
bomboni_wasm_core = { workspace = true }

proc-macro2 = { workspace = true, features = ["proc-macro"] }
syn.workspace = true
quote.workspace = true
darling.workspace = true
