[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "flinect_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
bomboni_common = { path = "../bomboni_common", features = ["wasm", "serde"] }
bomboni_proto = { path = "../bomboni_proto", features = [] }
bomboni_wasm = { path = "../bomboni_wasm", features = ["derive"] }
bomboni_request = { path = "../bomboni_request", features = ["wasm", "derive"] }

time = { version = "0.3.31", features = ["serde", "wasm-bindgen"] }
serde = { version = "1.0.193", features = ["derive"] }
wasm-bindgen = "0.2.89"
console_error_panic_hook = "0.1.7"
wee_alloc = "0.4.5"
tsify = { version = "0.4.5", features = ["js"] }
ts-rs = "7.0.0"
serde-wasm-bindgen = "0.6.3"
js-sys = "0.3.66"
chrono = { version = "0.4.31", features = ["serde", "wasmbind"] }
