[package]
name = "bookstore-cli"
version = "0.0.0"
edition.workspace = true
publish = false

[[bin]]
name = "bookstore-cli"
path = "src/main.rs"

[dependencies]
bookstore-api = { path = "../bookstore-api", features = ["client"] }
bomboni_common = { path = "../../../../bomboni_common" }
grpc_common = { path = "../../grpc-common" }
anyhow = "1.0.101"
clap = { version = "4.5.59", features = ["derive", "env"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
jsonwebtoken.workspace = true
time.workspace = true

chrono.workspace = true
prost-types.workspace = true
